--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,35 +3,67 @@
     border: 1px solid #babfc7;
 }
 
-.header {
-    padding: 20px;
+#projection-radio-buttons {
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    position:absolute;
+    top: 15px;
+    float: left;
+    display: inline;
 }
 
-.widget{
-    width: 700px;
+#container {
+    height: 100vh;
+    padding: 50px 100px;
+}
+
+#wordcloud {
+    max-width: 100%;
+    max-height: 100%;
     height: 450px;
-    margin: 10px;
+    width: 600px;
+    float: right;
+}
+
+.main-col {
+    height: 100%;
+}
+
+.main-row {
+    height: 50%;
+}
+
+.stretchy-widget {
+    width: 100%;
+    height: 100%;
 }
 
 .gallery{
     overflow-y: scroll;
-    height: 400px;
-    max-height: 400px;
 }
 
 .gallery-image{
-    height: 120px;
-    width: 120px;
     border: 2px solid #636363;
 }
 
-.gallery-row {
+.gallery-col {
     text-align: center;
-    padding-top: 10px;
 }
 
-.tooltip-text {
-  width: 120px;
-  color: #656565;
-  text-align: center;
+.gallery-row{
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
+
+.gallery-text {
+  color: #656565;
+}
+
+html, body {
+    overflow: clip;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
