Add attributes heatmap

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -45,6 +45,15 @@
     float: right;
 }
 
+#heatmap {
+    position: relative; 
+}
+
+#heatmap-container {
+    overflow: scroll; 
+    position: relative;
+}
+
 .main-col {
     height: 100%;
 }
