--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,6 +3,7 @@
     border: 1px solid #babfc7;
 }
 
+
 #header {
     font-family: sans-serif;
     font-weight: bold;
@@ -35,15 +36,26 @@
 
 #container {
     height: 100vh;
-    padding: 50px 100px;
+    padding: 65px 100px;
 }
 
 #wordcloud {
+    cursor:pointer;
+    width: 100%;
+    height: 100%;
     max-width: 100%;
     max-height: 100%;
-    height: 450px;
-    width: 600px;
-    float: right;
+}
+
+.wordcloud-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#histogram {
+    width: 100%;
+    height: 100%;
 }
 
 #heatmap {
@@ -57,10 +69,15 @@
 
 .main-col {
     height: 100%;
+    padding: 0;
 }
 
-.main-row {
-    height: 50%;
+.top-row {
+    height: 70%;
+}
+
+.bottom-row {
+    height: 30%;
 }
 
 .stretchy-widget {
@@ -76,6 +93,10 @@
     border: 2px solid #636363;
     width: 100px;
     height: 100px;
+}
+
+.gallery-card {
+    cursor:pointer;
 }
 
 .gallery-col {
