--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -46,7 +46,9 @@
     width: 100%;
     height: 100%;
     max-width: 100%;
-    max-height: 100%;
+    max-height: 480px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 .wordcloud-container{
@@ -60,6 +62,9 @@
     max-height: 100%;
     width: 100%;
     max-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #histogram {
