--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -43,21 +43,19 @@
 
 #wordcloud {
     cursor:pointer;
-    width: 100%;
     height: 100%;
-    max-width: 100%;
-    max-height: 480px;
-    padding-left: 50px;
-    padding-right: 50px;
+    width: 100%;
 }
 
 .wordcloud-container{
+    overflow: clip;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .wordcloud-container > div{
+    overflow: clip;
     height: 100%;
     max-height: 100%;
     width: 100%;
